# Boop

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/boop/color/: color.h
src/boop/render/: font.h  render.h
src/boop/texture/: store.h  texture.h
src/boop/timer/: timer.h
src/boop/window/: window.h
